force-app/main/default/objects/Task_Planning_Default__c/Task_Planning_Default__c.object-meta.xml
<CustomObject>
    <description>HRP-16123</description>
    <label>Task Planning Default</label>
    <nameField>
        <label>Task Planning Default Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Planning Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>