force-app/main/default/objects/Task_Planning_Default__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Task Planning Defaults</relationshipLabel>
    <relationshipName>Task_Planning_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>