force-app/main/default/objects/Task_Planning_Default__c/fields/Configured_Date__c.field-meta.xml
<CustomField>
    <fullName>Configured_Date__c</fullName>
    <label>Configured Date</label>
    <type>Date</type>
</CustomField>