force-app/main/default/objects/Task_Planning_Default__c/fields/Configured_Offset__c.field-meta.xml
<CustomField>
    <fullName>Configured_Offset__c</fullName>
    <label>Configured Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>