force-app/main/default/objects/Task_Planning_Default__c/fields/Scheduling_Method__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Method__c</fullName>
    <label>Scheduling Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Days Offset</fullName>
            </value>
            <value>
                <fullName>Target Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>