force-app/main/default/objects/Task_Planning_Default__c/fields/Task_Definition__c.field-meta.xml
<CustomField>
    <fullName>Task_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Definition</label>
    <referenceTo>Task_Definition__c</referenceTo>
    <relationshipLabel>Task Planning Defaults</relationshipLabel>
    <relationshipName>Task_Planning_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>