force-app/main/default/objects/Task_Planning_Default__c/fields/Template_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Template_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Task Planning Defaults</relationshipLabel>
    <relationshipName>Task_Planning_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>